--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
 		"start": "webpack-dev-server --mode development --open --hot",
+		"heroku-prebuild": "npm install --dev",
 		"build-watch": "webpack -w"
 	},
 	"repository": {
