--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"start": "webpack-dev-server --mode development --open --hot",
 		"heroku-prebuild": "npm install --dev",
+		"heroku-postbuild": "webpack -p",
 		"build-watch": "webpack -w"
 	},
 	"repository": {
