--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"start": "webpack-dev-server --mode development --open --hot",
+		"start": "node server.js",
 		"heroku-prebuild": "npm install --dev",
 		"heroku-postbuild": "webpack -p",
 		"build-watch": "webpack -w"
@@ -21,6 +21,7 @@
 	},
 	"homepage": "https://github.com/tqtruo/RecipeRummager#readme",
 	"dependencies": {
+		"express": "^4.17.1",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0"
 	},
