--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 	"dependencies": {
 		"express": "^4.17.1",
 		"react": "^16.12.0",
-		"react-dom": "^16.12.0"
+		"react-dom": "^16.12.0",
+		"serialize-javascript": "^2.1.1"
 	},
 	"devDependencies": {
 		"babel-core": "^6.26.3",
